# USACO-gold

./: .autocp  CMakeLists.txt  P1026.cpp  P1470  P1470.cpp
USACO - USACO 2015 December Contest Gold/: Problem_1_High_Card_Low_Card_Gold.cpp
USACO - USACO 2017 February Contest Gold/: Problem_1_Why_Did_the_Cow_Cross_the_Road.cpp
USACO - USACO 2017 January Contest Gold/: Problem_1_Balanced_Photo.cpp
USACO - USACO 2020 February Contest Gold/: Problem_1_Timeline.cpp  Problem_2_Help_Yourself.cpp  Problem_3_Delegation.cpp
USACO - USACO 2020 US Open Contest Gold/: Problem_3_Exercise.cpp
USACO - USACO 2021 December Contest Gold/: Problem_2_HILO.cpp
USACO - USACO 2022 US Open Contest Silver/: Problem_1_Visits.cpp  Problem_1_Visits[Graph-Theory].cpp  Problem_1_Visits[Union-Find]  Problem_1_Visits[Union-Find].cpp  Problem_2_Subset_Equality.cpp
USACO-20/: barn_tree.cpp
USACO-2017-February-Contest-Gold/: Problem_2_Why_Did_the_Cow_Cross_the_Road_II.cpp  Problem_3_Why_Did_the_Cow_Cross_the_Road_III.cpp
USACO-2018-December-Contest-Gold/: Teamwork  Teamwork.cpp
USACO-2018-February-Contest-Gold/: Problem_1_Snow_Boots.cpp  Problem_3_Taming_the_Herd.cpp
USACO-2018-Feburary-Contest-Gold/: Problem_2_Directory_Traverse  Problem_2_Directory_Traverse.cpp
USACO-2018-January-Contest-Gold/: Problem_2_Cow_At_Large.cpp
USACO-2018-US-Open-Contest-Gold/: Problem_1_Out_Of_Sorts.cpp
USACO-2019-US-OPEN-Contest-Gold/: Problem_1_Snakes  Problem_1_Snakes.cpp
USACO-2020-December-Contest-Gold/: Problem_3_Sqare_Pasture.cpp
USACO-2020-February-Contest-Gold/: Problem_3_Delegation  (+1 more)
(+75 files in other folders)
