cmake_minimum_required(VERSION 3.23)
project(Gold)

set(CMAKE_CXX_STANDARD 17)

add_executable(Problem_3_Taming_the_Herd "USACO - USACO 2018 February Contest Gold/Problem_3_Taming_the_Herd.cpp")
add_executable(Problem_1_High_Card_Low_Card_Gold "USACO - USACO 2015 December Contest Gold/Problem_1_High_Card_Low_Card_Gold.cpp")
add_executable(Problem_1_Why_Did_the_Cow_Cross_the_Road "USACO - USACO 2017 February Contest Gold/Problem_1_Why_Did_the_Cow_Cross_the_Road.cpp")
add_executable(Problem_2_Why_Did_the_Cow_Cross_the_Road_II "USACO - USACO 2017 February Contest Gold/Problem_2_Why_Did_the_Cow_Cross_the_Road_II.cpp")
add_executable(Problem_3_Why_Did_the_Cow_Cross_the_Road_III "USACO - USACO 2017 February Contest Gold/Problem_3_Why_Did_the_Cow_Cross_the_Road_III.cpp")
add_executable(Problem_1_Balanced_Photo "USACO - USACO 2017 January Contest Gold/Problem_1_Balanced_Photo.cpp")
add_executable(Problem_1_Snow_Boots "USACO - USACO 2018 February Contest Gold/Problem_1_Snow_Boots.cpp")
add_executable(Problem_2_HILO "USACO - USACO 2021 December Contest Gold/Problem_2_HILO.cpp")
add_executable(Problem_3_Exercise "USACO - USACO 2020 US Open Contest Gold/Problem_3_Exercise.cpp")
add_executable(Problem_3_Delegation "USACO - USACO 2020 February Contest Gold/Problem_3_Delegation.cpp")
add_executable(Problem_2_Help_Yourself "USACO - USACO 2020 February Contest Gold/Problem_2_Help_Yourself.cpp")